--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 PORT=4000
-MONGO_URI=mongodb://127.0.0.1:27017/pos
+MONGO=mongodb://127.0.0.1:27017/pos
 SECRET=kushposapp
+MONGO_URI=mongodb+srv://kushgc90:yrkaqeJ7J8hYU1yH@budget.lfxd08w.mongodb.net/pos?retryWrites=true&w=majority
