--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.2",
+    "stripe": "^16.5.0",
     "validator": "^13.11.0"
   }
 }
